2012-02-23  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/function.pm (getServerList): returns an 
	empty table if XML file not found.
	* src/foswiki_plugin/server_list.xml: added example xml file.

2012-02-23  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/RainbrurpgMetaserverPlugin.txt: improved
	plugin's documentation.

	* src/foswiki_plugin/README : Updated installation instructions
	and added dependencies list.

2012-01-19  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in : add a configuration summary.
	* configure.in (RB_FOSWIKI_DIR): create option for the foswiki
	installation directory.

	* src/foswiki_plugin/Makefile.am : three install prefix for
	documentation and source code of foswiki plugin.

2012-01-17  Jérôme Pasquier  <rainbru@free.fr>

	* src/ : libclient and libserver directories added with README.
	* src/foswiki_plugin : code and documentation move here.