@@ -28,6 +28,7 @@
      CLOCK: [2011-07-28 jeu. 14:41]--[2011-07-28 jeu. 15:06] =>  0:25
 - [X] Install plugin files only (no unit tests)
 **** TODO Correct project setup
+     CLOCK: [2012-03-04 dim. 16:17]--[2012-03-04 dim. 17:19] =>  1:02
      CLOCK: [2012-02-24 ven. 10:22]--[2012-02-24 ven. 10:54] =>  0:32
      CLOCK: [2012-02-23 jeu. 18:07]--[2012-02-23 jeu. 18:50] =>  0:43
      CLOCK: [2012-01-19 jeu. 09:14]--[2012-01-19 jeu. 09:37] =>  0:23
@@ -52,11 +53,12 @@
 - [X] autoconf --with-foswiki-dir command-line option
 - [X] Create a configure summary
 - [X] add src/lib* to archive
-- [ ] DEPENDENCIES files (Xml, Yaml) in each src/ subdirs
+- [X] configure handle for config.h the META_URL define
+      and add it to the configure summary
+- [X] DEPENDENCIES files (Xml, Yaml) in each src/ subdirs
 - [ ] libclient/ and libserver/ directories
       A README in each subdir
       - [ ] a pkg-config script for each is generated
-- [ ] configure handle for config.h the META_URL define
 - [X] create README files for subdirs
 **** Create unit tests for 'functions.pm'
      CLOCK: [2011-07-28 jeu. 17:20]--[2011-07-28 jeu. 17:37] =>  0:17
