@@ -11,17 +11,4 @@ Should use REST : see the 'restExample($session)' function
    Please update revision in configure.in and RainbrurpgMetaserverPlugin.txt
    Please update GNU ChangeLog
 
-* v0.0.0-2 (17 jan 2012 - ???) SLOC ??? UT ?? FT ??:??
-- (4) FW plugin prints an empty table if XML file not found
-- (3) Updated documentation in README and RainbrurpgMetaserverPlugin.txt
-- Create foswiki directory option for ./configure
-- Changed directory structure 
-   to fix 'too long filenames issues' for dist-bzip2
-
-* v0.0.0-1 (25 jul 2011 - 17 jan 2012) SLOC 229 UT ?? FT 2:14
-- libclient and libserver directories added with README
-- foswiki plugin code and doc moved to src/foswiki_plugin
-- Updated GNU headers date for 2012
-- Created a xml example file in ...Plugin directory
-- create a ROADMAP file
-- Correct project setup
+* v0.0.0-3 (04 mar 2012 - ???) SLOC ??? UT ?? FT ??:??
