@@ -1,0 +1,3 @@
+The following package should be installed before RainbruRPG-meta is installed:
+
+*No sources yet*
